REST server local address fixed